# imgui

./: CMakeLists.txt  main.cpp
ImguiWrapper/: CMakeLists.txt
ImguiWrapper/include/ImguiWrapper/: ImguiWrapper.hpp
MyApp/: CMakeLists.txt
MyApp/include/: Application.hpp  Logger.hpp  MainView.hpp  Model.hpp
MyApp/include/MyApp/: Application.hpp  MainView.hpp  Model.hpp  SafeQueue.hpp
MyApp/src/: Logger.cpp  MainView.cpp  main.cpp
src/: CMakeLists.txt  main.cpp
